--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -1643,7 +1643,8 @@ library("tidyr")
 ## Utility function that plots logcounts of a set of genes defined by "ind_vg"
 plot_vg <- function(ind_vg) {
   table_combined_genes_vg <- table_combined_genes[ind_vg, ]
-  # If more than 4 genes, pick top 4 ranked by differences in residual over-dispersion
+  ## If more than 4 genes,
+  ## pick top 4 ranked by differences in residual over-dispersion
   if(nrow(table_combined_genes_vg) > 4) {
     table_combined_genes_vg <- table_combined_genes_vg[
       order(abs(table_combined_genes_vg$ResDispDistance), decreasing = TRUE), ]
@@ -1678,8 +1679,12 @@ plot_vg <- function(ind_vg) {
 ## ie, genes that are probably unimodal but with higher variance in naive cells
 ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Naive+") &
   table_combined_genes$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) < 0.05 &
-  pmin(table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive) > 0.75
+  abs(
+    table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive
+  ) < 0.05 &
+  pmin(
+    table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive
+  ) > 0.75
 g1 <- plot_vg(ind_vg) +
     theme(legend.position = "none")
 
@@ -1690,8 +1695,12 @@ g1 <- plot_vg(ind_vg) +
 ## i.e., genes with more bursting pattern of expression
 ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Naive+") &
   table_combined_genes$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) > 0.40 &
-  pmax(table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive) > 0.75
+  abs(
+    table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive
+  ) > 0.40 &
+  pmax(
+    table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive
+  ) > 0.75
 g2 <- plot_vg(ind_vg)
 
 
@@ -1702,8 +1711,12 @@ g2 <- plot_vg(ind_vg)
 ## ie, genes that are probably unimodal but with higher variance
 ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Active+") &
   table_combined_genes$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) < 0.05 &
-  pmin(table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive) > 0.75
+  abs(
+    table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive
+  ) < 0.05 &
+  pmin(
+    table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive
+  ) > 0.75
 g3 <- plot_vg(ind_vg) +
     theme(legend.position = "none")
 
@@ -1714,8 +1727,12 @@ g3 <- plot_vg(ind_vg) +
 ## i.e., genes with more bursting pattern of expression
 ind_vg <- table_combined_genes$ResultDiffResDisp %in% c("Active+") &
   table_combined_genes$ResultDiffMean %in% c("NoDiff") &
-  abs(table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive) > 0.20 &
-  pmax(table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive) > 0.50
+  abs(
+    table_combined_genes$ExpPropNaive - table_combined_genes$ExpPropActive
+  ) > 0.20 &
+  pmax(
+    table_combined_genes$ExpPropNaive, table_combined_genes$ExpPropActive
+  ) > 0.50
 g4 <- plot_vg(ind_vg)
 
 (g1 + g2) / (g3 + g4) + plot_annotation(tag_levels = "A")
